--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,20 @@
   </head>
 
   <body>
-    <%= yield %>
+    <div class="header">
+      <div class="container">
+        <div class="logo">
+          <a class="" href="https://marleyspoon.com/" alt="Martha & Marley Spoon">Martha & Marley Spoon</a>
+        </div>
+        <div class="navigation">
+          <div class="navigation-item">
+            <%= link_to("View recipes", root_path, class: "#{current_page?(root_path) ? "active" : ""}") %>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="content">
+      <%= yield %>
+    </div>
   </body>
 </html>
